<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/intro"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/chair"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/parameter_1"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/ex1"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                tools:targetApi="o" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/units"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/btn_graphic_hint"
                android:onClick="onClickGraphicHint"
                android:text="@string/btn_graphic_hint" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/eyes"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/parameter_2"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/ex2"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                tools:targetApi="o" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/units"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/btn_graphic_hint"
                android:onClick="onClickGraphicHint"
                android:text="@string/btn_graphic_hint" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/table"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/parameter_3"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/ex3"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                tools:targetApi="o" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/units"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/btn_graphic_hint"
                android:onClick="onClickGraphicHint"
                android:text="@string/btn_graphic_hint" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/monitor_center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/parameter_4"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/ex4"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                tools:targetApi="o" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/units"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/btn_hint"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/btn_graphic_hint"
                android:onClick="onClickGraphicHint"
                android:text="@string/btn_graphic_hint" />

        </LinearLayout>

        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="onCalculate"
            android:text="@string/btn_calculate" />

    </LinearLayout>
</ScrollView>